--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -9,9 +9,7 @@
     background-size: cover;
     margin:  0 auto;
     max-width: 1600px;
-@media screen and(min-width:1200px) {
-  padding: 200px 0 ;
-}
+
     @media screen and(min-width:480px) {
       @media (min-device-pixel-ratio:2),
              (min-resolution: 192dpi),
@@ -22,14 +20,13 @@
  @media screen and(min-width:768px) {
        background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
       url('../imagens/tablet/header@1x.tab.jpg');
-
-  @media (min-device-pixel-ratio:2),
-         (min-resolution: 192dpi),
-         (min-resolution: 2dppx) {
-      background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
-        url('../imagens/tablet/header@2x.tab.jpg')}
-              }
-
+      
+      @media (min-device-pixel-ratio:2),
+      (min-resolution: 192dpi),
+      (min-resolution: 2dppx) {
+ background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
+  url('../imagens/desktop/header@2x.desktop.jpg')}
+ }
      @media screen and(min-width:1200px) {
       
        background-image: linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
