--- a/sass/base/_comand.scss
+++ b/sass/base/_comand.scss
@@ -8,7 +8,11 @@ body{
     background-color: var(--primary-backgroungd-color);
     }
     .section { 
-        padding: 94px 0;
+padding: 60px 0;
+    @media screen and(min-width:1200px) {
+      padding: 94px 0;
+    }
+        
        }
        
        .container {
