--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -25,7 +25,7 @@
       (min-resolution: 192dpi),
       (min-resolution: 2dppx) {
  background-image : linear-gradient(to right,rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
-  url('../imagens/tablet/header.jpg')}
+  url('../imagens/tablet/header@2x.tab.jpg')}
  }
      @media screen and(min-width:1200px) {
       
